--- a/app/components/nav/nav.edit_cluster.html
+++ b/app/components/nav/nav.edit_cluster.html
@@ -1,8 +1,8 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title" ng-show="!edit.update">Add an Industry in {{global.location.profile.name}}</h4>
-        <h4 class="modal-title" ng-show="edit.update">Update {{edit.community.name}} in {{global.location.profile.name}}</h4>
+        <h4 class="modal-title" ng-show="!edit.update">Add an Industry in {{global.location.name}}</h4>
+        <h4 class="modal-title" ng-show="edit.update">Update {{edit.community.name}} in {{global.location.name}}</h4>
         <p class="font-bold">An industry cluster is an entrepreneurial ecosystem in support of a market vertical.</p>
     </div>
     <div class="modal-body">
