--- a/app/components/users/user.contact.html
+++ b/app/components/users/user.contact.html
@@ -1,8 +1,8 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Contact {{contact.user.profile.name}}</h4>
-        <p class="font-bold">Before we connect you with {{contact.user.profile.name.split(" ")[0]}}, we will need to know a few things:</p>
+        <h4 class="modal-title">Contact {{contact.user.name}}</h4>
+        <p class="font-bold">Before we connect you with {{contact.user.name.split(" ")[0]}}, we will need to know a few things:</p>
     </div>
     <div class="modal-body">
         <form role="form" name="contact.form" novalidate ng-submit="contact.send()">
@@ -24,7 +24,7 @@
             <div class="form-group">
                 <input type="text" placeholder="Reason for contact.." class="form-control input-lg" required name="reason" ng-model="contact.form.reason_value">
                 <div class="m-t-xs" ng-show="contact.form.reason.$invalid && contact.form.submitted">
-                    <span class="text-danger" ng-show="contact.form.reason.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please tell us why you would like to get in touch with {{contact.user.profile.name.split(" ")[0]}}.</span>
+                    <span class="text-danger" ng-show="contact.form.reason.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please tell us why you would like to get in touch with {{contact.user.name.split(" ")[0]}}.</span>
                 </div>
             </div>
             <div class="hidden-submit"><input type="submit" tabindex="-1"/></div>
