--- a/app/components/users/user.request_invite.html
+++ b/app/components/users/user.request_invite.html
@@ -1,8 +1,8 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Join the {{global.location.profile.name.split(',')[0]}} Startup Community</h4>
-        <p class="font-bold"><strong>If you do not live in {{global.location.profile.name.split(',')[0]}}</strong>, please <a class="btn btn-xs btn-default" target="_blank" href="mailto:james@startupcommunity.org?subject=Please add my city!">click here</a> to send us an email and we will help you get started with your city.</p>
+        <h4 class="modal-title">Join the {{global.location.name.split(',')[0]}} Startup Community</h4>
+        <p class="font-bold"><strong>If you do not live in {{global.location.name.split(',')[0]}}</strong>, please <a class="btn btn-xs btn-default" target="_blank" href="mailto:james@startupcommunity.org?subject=Please add my city!">click here</a> to send us an email and we will help you get started with your city.</p>
     </div>
     <div class="modal-body">
         <div class="hpanel">
