--- a/app/components/companies/company.dashboard.network.panel.html
+++ b/app/components/companies/company.dashboard.network.panel.html
@@ -11,17 +11,17 @@
     </div>
     <div class="col-xs-4">
         <a ui-sref="user.list">
-            <h3 class="text-info pull-right">{{global.profile.team.count[type.name]}}</h3>
+            <h3 class="text-info pull-right">{{global.team.count[type.name]}}</h3>
         </a>
     </div>
 </div>
 <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:32px;">
-    <div ng-repeat="item in global.profile.team[type.name]" style="text-align: left;">
+    <div ng-repeat="item in global.team[type.name]" style="text-align: left;">
         <div>
             <div class="row" ng-include="'components/users/user.list.item.html'"></div>
         </div>
     </div>
-    <div ng-if="!global.profile.team[type.name]" style="padding-top: 10px; margin-bottom: -22px;">No {{::type.title.toLowerCase()}} yet..</div>
-    <div ladda="profile[type.name]" ng-if="global.profile.team[type.name] && global.profile.team.count[type.name] > 4" class="ladda-button btn btn-xs btn-default" style="margin-top: 6px; float:right;" ng-click="profile[type.name] = true" ui-sref="user.list">view all</div>
-    <div ng-if="global.user.roles[type.name][global.profile.slug]" class="btn btn-xs btn-default" style="margin-top: 6px; float:left;" ng-click="profile.remove(type.name)">Remove yourself as a {{::type.title.toLowerCase().substring(0, type.title.length-1)}}</div>
+    <div ng-if="!global.team[type.name]" style="padding-top: 10px; margin-bottom: -22px;">No {{::type.title.toLowerCase()}} yet..</div>
+    <div ladda="profile[type.name]" ng-if="global.team[type.name] && global.team.count[type.name] > 4" class="ladda-button btn btn-xs btn-default" style="margin-top: 6px; float:right;" ng-click="profile[type.name] = true" ui-sref="user.list">view all</div>
+    <div ng-if="global.user.roles[type.name][global.slug]" class="btn btn-xs btn-default" style="margin-top: 6px; float:left;" ng-click="profile.remove(type.name)">Remove yourself as a {{::type.title.toLowerCase().substring(0, type.title.length-1)}}</div>
 </div>
