--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -105,7 +105,7 @@
                         </li>
                         <hr style="margin: 10px 0 10px 0;">
                         <li ng-repeat="resource in nav.resources" ng-class="{'active':companies.selectedResources.indexOf(resource.slug) >= 0}" ng-click="companies.allResources=false; companies.filterResources(resource.slug);">
-                            <a>{{resource.profile.name}}</a>
+                            <a>{{resource.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -133,8 +133,8 @@
                         <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                     </div>
                     <div ng-show="companies.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{companies.tag}}..</h2><br/><br/></div>
-                    <div ng-show="companies.companies.results.length == 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
-                    <div ng-repeat="item in companies.companies.results" ng-switch on="$index % 2">
+                    <div ng-show="companies.companies.length == 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
+                    <div ng-repeat="item in companies.companies" ng-switch on="$index % 2">
                         <div class="col-md-6" ng-switch-when="0">
                             <div class="row"  ng-include="'components/companies/company.list.item.html'"></div>
                         </div>
