--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -4,27 +4,27 @@
             <header class="heading content" style="color:#fff">
                 <a href="javascript:window.location.href=window.location.href" style="color: #eee; font-size: 7px; float: left; margin-left: -40px; margin-top: -12px;">random image</a>
                 <button ng-if="global.community.slug == global.user.slug" ui-sref="welcome({location_path: global.location.slug, go: 'welcome.roles'})" ladda="editprofile" ng-click="editprofile = true" class="ladda-btn btn btn-warning pull-right" style="margin-left:-100px;">Edit Profile</button>
-                <img class="img-circle m-b" style="max-height:100px; max-width: 100px;" ng-src="{{profile.user.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{profile.user.profile.name}}" onerror="this.src='/public/images/blank_avatar.png'">
+                <img class="img-circle m-b" style="max-height:100px; max-width: 100px;" ng-src="{{profile.user.avatar || '/public/images/blank_avatar.png'}}" alt="{{profile.user.name}}" onerror="this.src='/public/images/blank_avatar.png'">
                 <div style="margin-top: -12px;">
                     <span ng-repeat="(item, val) in profile.user.roles" class="user-role" style="font-size: 24px;"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'pe-7s-paper-plane' : item == 'founder', 'pe-7s-flag' : item == 'leader', 'pe-7s-study' : item == 'mentor', 'pe-7s-gleam' : item == 'investor', 'pe-7s-ball' : item == 'team', 'pe-7s-portfolio' : item == 'provider'}"></i></span>
                 </div>
                 <div style="margin:-15px 0;">
-                    <button ng-if="profile.user.profile.parents[0]" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: profile.user.profile.parents[0]})">
-                        {{profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}
+                    <button ng-if="profile.user.parents[0]" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.home, community_path: profile.user.parents[0]})">
+                        {{profile.user.parents[0][0].toUpperCase() + profile.user.parents[0].slice(1);}}
                     </button>
-                    <button ng-if="global.community.locations[profile.user.profile.home].profile.name" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: ''})">
-                        {{global.community.locations[profile.user.profile.home].profile.name}}
+                    <button ng-if="global.community.locations[profile.user.home].name" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-default btn-xs" ui-sref="community.dashboard({location_path: profile.user.home, community_path: ''})">
+                        {{global.community.locations[profile.user.home].name}}
                     </button>
                 </div>
-                <h3 ng-show="profile.user.profile.name" style="padding-top: 5px; line-height: 1.5;">
-                    My name is <span class="name">{{profile.user.profile.name | words:0}} {{profile.user.profile.name |
-                    words:1}}</span><span ng-show="profile.user.profile.summary">, <span ng-bind-html="profile.user.profile.headline"></span></span>
+                <h3 ng-show="profile.user.name" style="padding-top: 5px; line-height: 1.5;">
+                    My name is <span class="name">{{profile.user.name | words:0}} {{profile.user.name |
+                    words:1}}</span><span ng-show="profile.user.summary">, <span ng-bind-html="profile.user.headline"></span></span>
                 </h3>
                 <a ng-click="profile.ask()" class="btn btn-success btn-sm">Ask me a question</a>
                 <a ng-click="profile.contact(global.community.slug)" title="Contact {{item.name}}" class="btn btn-sm btn-info" style="margin-left: 5px;">Contact me
                 </a>
                 <div style="padding-top:10px; overflow: hidden; height: 50px; margin-bottom: -10px;">
-                    <button ng-repeat="skill in profile.user.profile.skills" style="margin-right: 5px;" ladda="btnworking" class="ladda-btn btn btn-outline btn-default btn-xs" ng-click="btnworking = true; nav.search(skill);">
+                    <button ng-repeat="skill in profile.user.skills" style="margin-right: 5px;" ladda="btnworking" class="ladda-btn btn btn-outline btn-default btn-xs" ng-click="btnworking = true; nav.search(skill);">
                         {{::skill}}
                     </button>
                 </div>
@@ -63,7 +63,7 @@
 
             <div role="tabpanel" class="tab-pane" id="profile">
 
-                <div ng-include="'components/users/user.dashboard.profile.html'"></div>
+                <div ng-include="'components/users/user.dashboard.html'"></div>
 
             </div>
 
