basic cluster working

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -132,7 +132,7 @@
                 </ul>
             </li>
 
-            <li class="active" ng-show="global.location.locations">
+            <li class="active" ng-show="global.location.locations && global.community.locations">
                 <a style="cursor:default; margin-left: -7px;"><span>
 
                     Locations
