--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -40,7 +40,7 @@
   background: #fff;
   border: 1px solid @border-color;
   border-radius: 2px;
-  padding: 10px 20px;
+  padding: 10px;
   position: relative;
   //overflow: hidden; this breaks ui-select
 }
