--- a/app/components/search/search.dashboard.html
+++ b/app/components/search/search.dashboard.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="row">
+    <div class="row" style="margin-top: -15px;">
         <div class="panel-body col-md-12 col-lg-6">
             <div ui-view="people"></div>
         </div>
