--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -58,7 +58,7 @@
                                     Your role is:
 
                                 </h4>
-                                <select class="form-control input-lg industry-select" ng-model="add.selectedRole" ng-options="r as r.text for r in add.selectRoles"></select>
+                                <select class="form-control input-lg industry-select" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
                             </div>
                             <div class="form-group col-lg-6">
                                 <h4 class="w400">
