--- a/app/components/companies/company.dashboard.html
+++ b/app/components/companies/company.dashboard.html
@@ -56,7 +56,7 @@
 
             <div role="tabpanel" class="tab-pane" id="profile">
 
-                <div ng-include="'components/companies/company.dashboard.html'"></div>
+                <div ng-include="'components/companies/company.dashboard.profile.html'"></div>
 
             </div>
 
