--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -120,7 +120,7 @@
                                 </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <a ng-click="nav.search(item)">
+                                <a ng-click="nav.search(item.value)">
                                     <span class="number number-column">{{item.count}}</span>
                                 </a>
                             </div>
@@ -142,12 +142,12 @@
                     <div class="panel-body" ng-repeat="item in global.top.industries.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ng-click="nav.search(item)"><h4 style="font-weight: 200;">{{item.value}}</h4>
+                                <a ng-click="nav.search(item.value)"><h4 style="font-weight: 200;">{{item.value}}</h4>
                                     <uib-progressbar ng-attr-value="(item.count/global.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                                 </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <a ng-click="nav.search(item)">
+                                <a ng-click="nav.search(item.value)">
                                     <span class="number number-column">{{item.count}}</span>
                                 </a>
                             </div>
@@ -168,12 +168,12 @@
                     <div class="panel-body" ng-repeat="item in global.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ng-click="nav.search(item)"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4>
+                                <a ng-click="nav.search(item.value)"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4>
                                     <uib-progressbar value="item.value" max="global.top.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                                 </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <a ng-click="nav.search(item)">
+                                <a ng-click="nav.search(item.value)">
                                     <span class="number number-column">{{((item.value / global.top.max)*100).toFixed(0)}}%</span>
                                 </a>
                             </div>
